@@ -1,5 +1,8 @@
 2021-02-20  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/Shell.java:
+	Added classpath() method.
+
 	* src/main/java/galyleo/shell/magic/Classpath.java:
 	Initial writing.
 
